// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dd62 avamar 2026-06-10 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD6300ERB@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 1233511.1,
      },
      {
        "availGib": 102776.1,
        "cleanableGib": 422.5,
        "resource": "/data: post-comp",
        "sizeGib": 129980.7,
        "tier": "active",
        "usePct": 21,
        "usedGib": 27204.6,
      },
      {
        "availGib": 33.2,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.2,
        "tier": "active",
        "usePct": 26,
        "usedGib": 11.7,
      },
      {
        "availGib": 102.6,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 108.3,
        "tier": "active",
        "usePct": 0,
        "usedGib": 0.2,
      },
    ],
    "chassisSerial": "FCNCS190700012",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 27204.6,
        "precompGib": 1233511.1,
        "reductionPct": 97.8,
        "totalCompFactor": 45.3,
      },
      {
        "globalCompFactor": 53.5,
        "localCompFactor": 2.4,
        "period": "last_7_days",
        "postcompGib": 4021.5,
        "precompGib": 517758.2,
        "reductionPct": 99.2,
        "totalCompFactor": 128.7,
      },
      {
        "globalCompFactor": 51,
        "localCompFactor": 2.5,
        "period": "last_24_hrs",
        "postcompGib": 530.3,
        "precompGib": 66517.9,
        "reductionPct": 99.2,
        "totalCompFactor": 125.4,
      },
    ],
    "deviceAlerts": [
      {
        "alertId": "p0-258",
        "class": "SystemMaintenance",
        "isActive": true,
        "message": "EVT-SMTOOL-00001: Error communicating with mail server.",
        "object": "",
        "postedAt": 2025-11-11T03:05:29.000Z,
        "severity": "CRITICAL",
      },
    ],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 0,
      "disksInUse": 55,
      "disksSpare": 4,
      "reliabilityNotes": [
        "Normal - Storage operational",
      ],
    },
    "displayName": "DDAvamar",
    "fsAvailabilityPct": 99.446,
    "generatedAt": 2026-06-10T03:02:13.000Z,
    "hostname": "DDAvamar.iq.zain.com",
    "lastCleaningAt": 2026-06-09T05:08:07.000Z,
    "loadAvg15m": 3.86,
    "loadAvg1m": 4.22,
    "loadAvg5m": 3.85,
    "location": "Baghdad",
    "memFreeMib": 5739,
    "memTotalMib": 96521,
    "modelNo": "DD6300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/avamar-1720525121",
        "precompGib": 1065437.9,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/avamar-1778684749",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/avamar-1778770410",
        "precompGib": 27210.5,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkererbil_new",
        "precompGib": 140862.7,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:ab:75:22",
        "linkUp": null,
        "port": "ethMa",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5c",
        "linkUp": true,
        "port": "eth1a",
        "speed": "100Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5d",
        "linkUp": true,
        "port": "eth1b",
        "speed": "100Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5e",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a9:25:5f",
        "linkUp": null,
        "port": "eth1d",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a8:d9:9c",
        "linkUp": null,
        "port": "eth3a",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9d",
        "linkUp": true,
        "port": "eth3b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9e",
        "linkUp": true,
        "port": "eth3c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9e",
        "linkUp": true,
        "port": "eth3d",
        "speed": "10Gb/s",
        "state": "running",
      },
    ],
    "osVersion": "Data Domain OS 6.2.0.30-629757",
    "reportDate": "2026-06-10",
    "serialNo": "CKM00192701721",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.489,
    "timeZone": "Asia/Baghdad",
    "uptimeDays": 344,
    "warnings": [
      "Alert severity "ERROR" normalised to CRITICAL (not in DB enum)",
    ],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [
    "Alert severity "ERROR" normalised to CRITICAL (not in DB enum)",
  ],
}
`;

exports[`dd62 avamar 2026-06-11 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD6300ERB@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 1228493.2,
      },
      {
        "availGib": 102284,
        "cleanableGib": 958.5,
        "resource": "/data: post-comp",
        "sizeGib": 129980.7,
        "tier": "active",
        "usePct": 21,
        "usedGib": 27696.7,
      },
      {
        "availGib": 33.2,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.2,
        "tier": "active",
        "usePct": 26,
        "usedGib": 11.7,
      },
      {
        "availGib": 102.6,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 108.3,
        "tier": "active",
        "usePct": 0,
        "usedGib": 0.2,
      },
    ],
    "chassisSerial": "FCNCS190700012",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 27696.7,
        "precompGib": 1228493.3,
        "reductionPct": 97.7,
        "totalCompFactor": 44.4,
      },
      {
        "globalCompFactor": 53.6,
        "localCompFactor": 2.4,
        "period": "last_7_days",
        "postcompGib": 3978.9,
        "precompGib": 514051.6,
        "reductionPct": 99.2,
        "totalCompFactor": 129.2,
      },
      {
        "globalCompFactor": 54.1,
        "localCompFactor": 2.5,
        "period": "last_24_hrs",
        "postcompGib": 467.9,
        "precompGib": 62422.8,
        "reductionPct": 99.3,
        "totalCompFactor": 133.4,
      },
    ],
    "deviceAlerts": [
      {
        "alertId": "p0-258",
        "class": "SystemMaintenance",
        "isActive": true,
        "message": "EVT-SMTOOL-00001: Error communicating with mail server.",
        "object": "",
        "postedAt": 2025-11-11T03:05:29.000Z,
        "severity": "CRITICAL",
      },
    ],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 0,
      "disksInUse": 55,
      "disksSpare": 4,
      "reliabilityNotes": [
        "Normal - Storage operational",
      ],
    },
    "displayName": "DDAvamar",
    "fsAvailabilityPct": 99.447,
    "generatedAt": 2026-06-11T03:02:13.000Z,
    "hostname": "DDAvamar.iq.zain.com",
    "lastCleaningAt": 2026-06-09T05:08:07.000Z,
    "loadAvg15m": 4.17,
    "loadAvg1m": 4.04,
    "loadAvg5m": 4.1,
    "location": "Baghdad",
    "memFreeMib": 5702,
    "memTotalMib": 96521,
    "modelNo": "DD6300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/avamar-1720525121",
        "precompGib": 1060419.6,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/avamar-1778684749",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/avamar-1778770410",
        "precompGib": 27210.9,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkererbil_new",
        "precompGib": 140862.7,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:ab:75:22",
        "linkUp": null,
        "port": "ethMa",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5c",
        "linkUp": true,
        "port": "eth1a",
        "speed": "100Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5d",
        "linkUp": true,
        "port": "eth1b",
        "speed": "100Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:25:5e",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a9:25:5f",
        "linkUp": null,
        "port": "eth1d",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a8:d9:9c",
        "linkUp": null,
        "port": "eth3a",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9d",
        "linkUp": true,
        "port": "eth3b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9e",
        "linkUp": true,
        "port": "eth3c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:d9:9e",
        "linkUp": true,
        "port": "eth3d",
        "speed": "10Gb/s",
        "state": "running",
      },
    ],
    "osVersion": "Data Domain OS 6.2.0.30-629757",
    "reportDate": "2026-06-11",
    "serialNo": "CKM00192701721",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.49,
    "timeZone": "Asia/Baghdad",
    "uptimeDays": 345,
    "warnings": [
      "Alert severity "ERROR" normalised to CRITICAL (not in DB enum)",
    ],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [
    "Alert severity "ERROR" normalised to CRITICAL (not in DB enum)",
  ],
}
`;

exports[`dd77 offset 2026-06-10 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD9300IBDDC@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 386183.1,
      },
      {
        "availGib": 166566.4,
        "cleanableGib": 3137.8,
        "resource": "/data: post-comp",
        "sizeGib": 430176,
        "tier": "active",
        "usePct": 61,
        "usedGib": 263609.7,
      },
      {
        "availGib": 27.2,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.1,
        "tier": "active",
        "usePct": 39,
        "usedGib": 17.5,
      },
      {
        "availGib": 934.1,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 984.2,
        "tier": "active",
        "usePct": 0,
        "usedGib": 0.1,
      },
    ],
    "chassisSerial": "FCNCS190700468",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 263609.7,
        "precompGib": 386183.1,
        "reductionPct": 31.7,
        "totalCompFactor": 1.5,
      },
      {
        "globalCompFactor": 4.7,
        "localCompFactor": 1.3,
        "period": "last_7_days",
        "postcompGib": 30595.2,
        "precompGib": 190083.6,
        "reductionPct": 83.9,
        "totalCompFactor": 6.2,
      },
      {
        "globalCompFactor": 1.1,
        "localCompFactor": 1.3,
        "period": "last_24_hrs",
        "postcompGib": 3582,
        "precompGib": 4904,
        "reductionPct": 27,
        "totalCompFactor": 1.4,
      },
    ],
    "deviceAlerts": [],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 0,
      "disksInUse": 151,
      "disksSpare": 11,
      "reliabilityNotes": [
        "Normal - Storage operational",
      ],
    },
    "displayName": "DD9300IBDDC",
    "fsAvailabilityPct": 99.988,
    "generatedAt": 2026-06-10T05:23:00.000Z,
    "hostname": "DD9300IBDDC.iq.zain.com",
    "lastCleaningAt": 2026-06-09T12:05:00.000Z,
    "loadAvg15m": 11.3,
    "loadAvg1m": 11.72,
    "loadAvg5m": 11.41,
    "location": "Unspecified",
    "memFreeMib": 136796,
    "memTotalMib": 386865,
    "modelNo": "DD9300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkeribddc",
        "precompGib": 386183.1,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:ab:6d:06",
        "linkUp": true,
        "port": "ethMa",
        "speed": "1000Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:58",
        "linkUp": true,
        "port": "eth1a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:59",
        "linkUp": true,
        "port": "eth1b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:5a",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a9:21:5b",
        "linkUp": null,
        "port": "eth1d",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4c",
        "linkUp": true,
        "port": "eth3a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4d",
        "linkUp": true,
        "port": "eth3b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4e",
        "linkUp": true,
        "port": "eth3c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4f",
        "linkUp": true,
        "port": "eth3d",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:9b:78:64",
        "linkUp": true,
        "port": "eth4a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:9b:78:65",
        "linkUp": true,
        "port": "eth4b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:9b:78:66",
        "linkUp": null,
        "port": "eth4c",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4f",
        "linkUp": true,
        "port": "eth4d",
        "speed": "10Gb/s",
        "state": "running",
      },
    ],
    "osVersion": "Data Domain OS 7.7.5.25-1078970",
    "reportDate": "2026-06-10",
    "serialNo": "CKM00192901558",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.989,
    "timeZone": "Europe/London",
    "uptimeDays": 422,
    "warnings": [],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [],
}
`;

exports[`dd77 offset 2026-06-11 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD9300IBDDC@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 387800.5,
      },
      {
        "availGib": 161745.3,
        "cleanableGib": 6228.5,
        "resource": "/data: post-comp",
        "sizeGib": 430176,
        "tier": "active",
        "usePct": 62,
        "usedGib": 268430.8,
      },
      {
        "availGib": 27.2,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.1,
        "tier": "active",
        "usePct": 39,
        "usedGib": 17.5,
      },
      {
        "availGib": 934.1,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 984.2,
        "tier": "active",
        "usePct": 0,
        "usedGib": 0.1,
      },
    ],
    "chassisSerial": "FCNCS190700468",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 268430.7,
        "precompGib": 387800.5,
        "reductionPct": 30.8,
        "totalCompFactor": 1.4,
      },
      {
        "globalCompFactor": 4.6,
        "localCompFactor": 1.3,
        "period": "last_7_days",
        "postcompGib": 31923.6,
        "precompGib": 191479.4,
        "reductionPct": 83.3,
        "totalCompFactor": 6,
      },
      {
        "globalCompFactor": 1.1,
        "localCompFactor": 1.2,
        "period": "last_24_hrs",
        "postcompGib": 4666,
        "precompGib": 6078.6,
        "reductionPct": 23.2,
        "totalCompFactor": 1.3,
      },
    ],
    "deviceAlerts": [],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 0,
      "disksInUse": 151,
      "disksSpare": 11,
      "reliabilityNotes": [
        "Normal - Storage operational",
      ],
    },
    "displayName": "DD9300IBDDC",
    "fsAvailabilityPct": 99.988,
    "generatedAt": 2026-06-11T05:23:00.000Z,
    "hostname": "DD9300IBDDC.iq.zain.com",
    "lastCleaningAt": 2026-06-09T12:05:00.000Z,
    "loadAvg15m": 11.2,
    "loadAvg1m": 11.2,
    "loadAvg5m": 11.23,
    "location": "Unspecified",
    "memFreeMib": 136788,
    "memTotalMib": 386865,
    "modelNo": "DD9300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkeribddc",
        "precompGib": 387800.5,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:ab:6d:06",
        "linkUp": true,
        "port": "ethMa",
        "speed": "1000Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:58",
        "linkUp": true,
        "port": "eth1a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:59",
        "linkUp": true,
        "port": "eth1b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a9:21:5a",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:a9:21:5b",
        "linkUp": null,
        "port": "eth1d",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4c",
        "linkUp": true,
        "port": "eth3a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4d",
        "linkUp": true,
        "port": "eth3b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4e",
        "linkUp": true,
        "port": "eth3c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4f",
        "linkUp": true,
        "port": "eth3d",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:9b:78:64",
        "linkUp": true,
        "port": "eth4a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:9b:78:65",
        "linkUp": true,
        "port": "eth4b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:9b:78:66",
        "linkUp": null,
        "port": "eth4c",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:a8:da:4f",
        "linkUp": true,
        "port": "eth4d",
        "speed": "10Gb/s",
        "state": "running",
      },
    ],
    "osVersion": "Data Domain OS 7.7.5.25-1078970",
    "reportDate": "2026-06-11",
    "serialNo": "CKM00192901558",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.989,
    "timeZone": "Europe/London",
    "uptimeDays": 423,
    "warnings": [],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [],
}
`;

exports[`dd713 bag 2026-06-11 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD9300DC@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 559956.4,
      },
      {
        "availGib": 137746,
        "cleanableGib": 85223.1,
        "resource": "/data: post-comp",
        "sizeGib": 404147.5,
        "tier": "active",
        "usePct": 66,
        "usedGib": 266401.5,
      },
      {
        "availGib": 21.8,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.1,
        "tier": "active",
        "usePct": 51,
        "usedGib": 22.9,
      },
      {
        "availGib": 831.2,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 984.2,
        "tier": "active",
        "usePct": 11,
        "usedGib": 103,
      },
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "cloud",
        "usePct": null,
        "usedGib": 215990.3,
      },
      {
        "availGib": 74420.3,
        "cleanableGib": 5314.9,
        "resource": "/data: post-comp",
        "sizeGib": 279301.2,
        "tier": "cloud",
        "usePct": 73,
        "usedGib": 204880.9,
      },
    ],
    "chassisSerial": "FCNCS171500611",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 266401.5,
        "precompGib": 559956.3,
        "reductionPct": 52.4,
        "totalCompFactor": 2.1,
      },
      {
        "globalCompFactor": 2,
        "localCompFactor": 2.7,
        "period": "last_7_days",
        "postcompGib": 3529.5,
        "precompGib": 19307.7,
        "reductionPct": 81.7,
        "totalCompFactor": 5.5,
      },
      {
        "globalCompFactor": 1.5,
        "localCompFactor": 3.2,
        "period": "last_24_hrs",
        "postcompGib": 266.3,
        "precompGib": 1275.9,
        "reductionPct": 79.1,
        "totalCompFactor": 4.8,
      },
    ],
    "deviceAlerts": [
      {
        "alertId": "p0-501",
        "class": "HardwareFailure",
        "isActive": true,
        "message": "EVT-STORAGE-00002: Unable to access a disk and the disk state is failed.",
        "object": "Enclosure=4:Disk=51",
        "postedAt": 2026-04-03T02:42:07.000Z,
        "severity": "CRITICAL",
      },
    ],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 1,
      "disksInUse": 207,
      "disksSpare": 14,
      "reliabilityNotes": [
        "Warning - Disk failure(s)",
      ],
    },
    "displayName": "DD9300",
    "fsAvailabilityPct": 99.993,
    "generatedAt": 2026-06-11T03:59:06.000Z,
    "hostname": "DD9300.iq.zain.com",
    "lastCleaningAt": 2026-04-26T20:43:02.000Z,
    "loadAvg15m": 12.51,
    "loadAvg1m": 12.81,
    "loadAvg5m": 12.5,
    "location": "Baghdad",
    "memFreeMib": 87947,
    "memTotalMib": 386852,
    "modelNo": "DD9300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/860_Default",
        "precompGib": 332398.8,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DD990_Pool",
        "precompGib": 23574.6,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DDBOOST-FC-FMS",
        "precompGib": 485.1,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DDBOOST-FC-RA",
        "precompGib": 115620,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/Default",
        "precompGib": 602.6,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/HQ_DD900",
        "precompGib": 94903.3,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkeribddc",
        "precompGib": 208362.2,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nve",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nve01",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nw19",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ZAIN_IQ",
        "precompGib": 0,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:72:c7:a8",
        "linkUp": true,
        "port": "ethMa",
        "speed": "1000Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:80",
        "linkUp": true,
        "port": "eth1a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:80",
        "linkUp": true,
        "port": "eth1b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:82",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:83",
        "linkUp": true,
        "port": "eth1d",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:08",
        "linkUp": null,
        "port": "eth3a",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:09",
        "linkUp": null,
        "port": "eth3b",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:0a",
        "linkUp": null,
        "port": "eth3c",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:0b",
        "linkUp": null,
        "port": "eth3d",
        "speed": "unknown",
        "state": "fault",
      },
    ],
    "osVersion": "Data Domain OS 7.13.1.25-1161300",
    "reportDate": "2026-06-11",
    "serialNo": "CKM00171702213",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.995,
    "timeZone": "Asia/Baghdad",
    "uptimeDays": 202,
    "warnings": [
      "Cloud Tier compression block present but not stored (schema stores Active Tier only)",
    ],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [
    "Cloud Tier compression block present but not stored (schema stores Active Tier only)",
  ],
}
`;

exports[`dd713 bag 2026-06-12 > matches snapshot 1`] = `
{
  "data": {
    "adminEmail": "DD9300DC@iq.zain.com",
    "capacitySnapshots": [
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "active",
        "usePct": null,
        "usedGib": 562139.9,
      },
      {
        "availGib": 137190.1,
        "cleanableGib": 85426.7,
        "resource": "/data: post-comp",
        "sizeGib": 404147.5,
        "tier": "active",
        "usePct": 66,
        "usedGib": 266957.4,
      },
      {
        "availGib": 21.8,
        "cleanableGib": null,
        "resource": "/ddvar",
        "sizeGib": 47.1,
        "tier": "active",
        "usePct": 51,
        "usedGib": 22.9,
      },
      {
        "availGib": 831.2,
        "cleanableGib": null,
        "resource": "/ddvar/core",
        "sizeGib": 984.2,
        "tier": "active",
        "usePct": 11,
        "usedGib": 103,
      },
      {
        "availGib": null,
        "cleanableGib": null,
        "resource": "/data: pre-comp",
        "sizeGib": null,
        "tier": "cloud",
        "usePct": null,
        "usedGib": 215990.3,
      },
      {
        "availGib": 74420.3,
        "cleanableGib": 5314.9,
        "resource": "/data: post-comp",
        "sizeGib": 279301.2,
        "tier": "cloud",
        "usePct": 73,
        "usedGib": 204880.9,
      },
    ],
    "chassisSerial": "FCNCS171500611",
    "compressionStats": [
      {
        "globalCompFactor": null,
        "localCompFactor": null,
        "period": "currently_used",
        "postcompGib": 266957.5,
        "precompGib": 562140,
        "reductionPct": 52.5,
        "totalCompFactor": 2.1,
      },
      {
        "globalCompFactor": 2.1,
        "localCompFactor": 2.7,
        "period": "last_7_days",
        "postcompGib": 3642.2,
        "precompGib": 20405.2,
        "reductionPct": 82.2,
        "totalCompFactor": 5.6,
      },
      {
        "globalCompFactor": 2.2,
        "localCompFactor": 2.7,
        "period": "last_24_hrs",
        "postcompGib": 412.4,
        "precompGib": 2455.6,
        "reductionPct": 83.2,
        "totalCompFactor": 6,
      },
    ],
    "deviceAlerts": [
      {
        "alertId": "p0-501",
        "class": "HardwareFailure",
        "isActive": true,
        "message": "EVT-STORAGE-00002: Unable to access a disk and the disk state is failed.",
        "object": "Enclosure=4:Disk=51",
        "postedAt": 2026-04-03T02:42:07.000Z,
        "severity": "CRITICAL",
      },
    ],
    "disks": {
      "disksAbsent": 0,
      "disksFailed": 1,
      "disksInUse": 207,
      "disksSpare": 14,
      "reliabilityNotes": [
        "Warning - Disk failure(s)",
      ],
    },
    "displayName": "DD9300",
    "fsAvailabilityPct": 99.993,
    "generatedAt": 2026-06-12T03:59:05.000Z,
    "hostname": "DD9300.iq.zain.com",
    "lastCleaningAt": 2026-04-26T20:43:02.000Z,
    "loadAvg15m": 13.66,
    "loadAvg1m": 12.83,
    "loadAvg5m": 13.5,
    "location": "Baghdad",
    "memFreeMib": 87766,
    "memTotalMib": 386852,
    "modelNo": "DD9300",
    "mtrees": [
      {
        "mtreePath": "/data/col1/860_Default",
        "precompGib": 333456.3,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/backup",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DD990_Pool",
        "precompGib": 23605.8,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DDBOOST-FC-FMS",
        "precompGib": 485.1,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/DDBOOST-FC-RA",
        "precompGib": 115620,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/Default",
        "precompGib": 602.6,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/HQ_DD900",
        "precompGib": 94922.6,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ntkeribddc",
        "precompGib": 209437.8,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nve",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nve01",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/nw19",
        "precompGib": 0,
        "status": "RW",
      },
      {
        "mtreePath": "/data/col1/ZAIN_IQ",
        "precompGib": 0,
        "status": "RW",
      },
    ],
    "networkInterfaces": [
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:72:c7:a8",
        "linkUp": true,
        "port": "ethMa",
        "speed": "1000Mb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:80",
        "linkUp": true,
        "port": "eth1a",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:80",
        "linkUp": true,
        "port": "eth1b",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:82",
        "linkUp": true,
        "port": "eth1c",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "full",
        "hardwareAddress": "00:60:16:84:00:83",
        "linkUp": true,
        "port": "eth1d",
        "speed": "10Gb/s",
        "state": "running",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:08",
        "linkUp": null,
        "port": "eth3a",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:09",
        "linkUp": null,
        "port": "eth3b",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:0a",
        "linkUp": null,
        "port": "eth3c",
        "speed": "unknown",
        "state": "fault",
      },
      {
        "duplex": "unknown",
        "hardwareAddress": "00:60:16:81:f0:0b",
        "linkUp": null,
        "port": "eth3d",
        "speed": "unknown",
        "state": "fault",
      },
    ],
    "osVersion": "Data Domain OS 7.13.1.25-1161300",
    "reportDate": "2026-06-12",
    "serialNo": "CKM00171702213",
    "swapFreeMib": 5119,
    "swapTotalMib": 5119,
    "systemAvailabilityPct": 99.995,
    "timeZone": "Asia/Baghdad",
    "uptimeDays": 203,
    "warnings": [
      "Cloud Tier compression block present but not stored (schema stores Active Tier only)",
    ],
  },
  "ok": true,
  "type": "part_a",
  "warnings": [
    "Cloud Tier compression block present but not stored (schema stores Active Tier only)",
  ],
}
`;

exports[`dd713 bag part B 2026-06-11 > matches snapshot 1`] = `
{
  "data": {
    "generatedAt": 2026-06-11T03:59:06.000Z,
    "hostname": "DD9300.iq.zain.com",
    "rawJson": {
      "gds_stats": {
        "gds_report": [],
      },
      "general_info": {
        "admin_email": "DD9300DC@iq.zain.com",
        "chassis_serialno": "FCNCS171500611",
        "data_encryption_supported": "Yes",
        "dell_servicetag": "Unspecified",
        "generated_epoch_time": "1781150346",
        "generated_on": "Thu Jun 11 06:59:06 +03 2026",
        "ha_enabled": false,
        "hostname": "DD9300.iq.zain.com",
        "hw_revision": "1",
        "location": "Baghdad",
        "model_no": "DD9300",
        "ssd_shelf_present": "NO",
        "system_serialno": "CKM00171702213",
        "time_zone": "Asia/Baghdad",
        "tpm_device_info": " TPM device not available",
        "uptime": [
          "06:59:15 up 202 days, 19:29, 0 users, load average: 12.81, 12.50, 12.51",
          "Filesystem has been up 202 days, 19:15.",
        ],
        "version": "Data Domain OS 7.13.1.25-1161300",
      },
      "hwrot": {
        "supported": false,
      },
    },
    "timeZone": "Asia/Baghdad",
  },
  "ok": true,
  "type": "part_b",
  "warnings": [],
}
`;

exports[`dd713 bag part B 2026-06-12 > matches snapshot 1`] = `
{
  "data": {
    "generatedAt": 2026-06-12T03:59:05.000Z,
    "hostname": "DD9300.iq.zain.com",
    "rawJson": {
      "gds_stats": {
        "gds_report": [],
      },
      "general_info": {
        "admin_email": "DD9300DC@iq.zain.com",
        "chassis_serialno": "FCNCS171500611",
        "data_encryption_supported": "Yes",
        "dell_servicetag": "Unspecified",
        "generated_epoch_time": "1781236745",
        "generated_on": "Fri Jun 12 06:59:05 +03 2026",
        "ha_enabled": false,
        "hostname": "DD9300.iq.zain.com",
        "hw_revision": "1",
        "location": "Baghdad",
        "model_no": "DD9300",
        "ssd_shelf_present": "NO",
        "system_serialno": "CKM00171702213",
        "time_zone": "Asia/Baghdad",
        "tpm_device_info": " TPM device not available",
        "uptime": [
          "06:59:10 up 203 days, 19:29, 0 users, load average: 12.83, 13.50, 13.66",
          "Filesystem has been up 203 days, 19:15.",
        ],
        "version": "Data Domain OS 7.13.1.25-1161300",
      },
      "hwrot": {
        "supported": false,
      },
    },
    "timeZone": "Asia/Baghdad",
  },
  "ok": true,
  "type": "part_b",
  "warnings": [],
}
`;
